--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    env:
-      CTX_DIGITALOCEAN_DROPLET_PROXY_TOKEN: $(echo ${{ secrets.ORG_DIGITALOCEAN_DROPLET_PROXY_TOKEN }} | base64 -d)
-      CTX_DIGITALOCEAN_FIREWALL: $(echo ${{ secrets.ORG_DIGITALOCEAN_FIREWALL }} | base64 -d)
     steps:
       - uses: actions/checkout@v2
       - name: Build docker image
@@ -28,6 +25,8 @@ jobs:
 
       - name: Deploy to DO
         run: |
+          export CTX_DIGITALOCEAN_DROPLET_PROXY_TOKEN=$(echo ${{ secrets.ORG_DIGITALOCEAN_DROPLET_PROXY_TOKEN }} | base64 -d)
+          export CTX_DIGITALOCEAN_FIREWALL=$(echo ${{ secrets.ORG_DIGITALOCEAN_FIREWALL }} | base64 -d)
           git clone https://github.com/ackersonde/digitaloceans.git
           cd digitaloceans
           go get -t -d -v ./...
