--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,7 @@ jobs:
           ./digitaloceans/do -fn=firewallSSH -allow=true -ip=$public_ip_address -tag=traefik
 
           mkdir ~/.ssh
-          cat <<EOF >~/.ssh/id_rsa
-          $(echo ${{ secrets.ORG_DIGITALOCEAN_SSH_PRIVKEY }} | base64 -d)
-          EOF
+          echo ${{ secrets.ORG_DIGITALOCEAN_SSH_PRIVKEY }} | base64 -d | tee ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
 
           ssh -o StrictHostKeyChecking=no root@ackerson.de "\
